week12/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
spec:
  gateways:
    - service0
  hosts:
    - httpserver.week12.io
  http:
  - match:
      - port: 443
      - uri:
          exact: /service0
    rewrite:
      uri: "/hello"
    route:
      - destination:
          host: service0
          port:
            number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpserver.week12.io
      port:
        name: http-service0
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: week12-credential
